Add login and signup pages.

--- a/public/user.html
+++ b/public/user.html
@@ -5,10 +5,10 @@
     <title>Buy Me</title>
     <link rel="stylesheet" href="lib/material-design-fonticons/styles/mdfi.css">
     <link rel="stylesheet" href="css/material-ui.css">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/user.css">
 </head>
 <body>
-<div id="app">Login</div>
-<script src="js/login.js"></script>
+<div id="user"></div>
+<script src="js/user.js"></script>
 </body>
 </html>
