--- a/public/user.html
+++ b/public/user.html
@@ -5,6 +5,7 @@
     <title>Buy Me</title>
     <link rel="stylesheet" href="lib/material-design-fonticons/styles/mdfi.css">
     <link rel="stylesheet" href="css/material-ui.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/user.css">
 </head>
 <body>
